fixed responsive layout issues for people page cards and single person page

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -715,7 +715,10 @@
     margin: 10px;
     text-align: center;
     flex-basis: 30%;
-    flex-grow: 0; }
+    flex-grow: 1; }
+    @media only screen and (max-width: 768px) {
+      .itls-styled .people-grid .person {
+        flex-basis: 47%; } }
     .itls-styled .people-grid .person hr {
       border: none;
       border-bottom: 2px solid #E7E7E7;
@@ -726,7 +729,7 @@
       font-size: 13px; }
     .itls-styled .people-grid .person .person-image {
       background-color: #ddd;
-      max-width: 150px;
+      width: 150px;
       margin: 10px;
       border-radius: 5px; }
 
@@ -734,21 +737,31 @@
   margin-top: 30px;
   display: flex;
   flex-direction: row; }
+  @media only screen and (max-device-width: 600px), only screen and (max-width: 600px) {
+    .itls-styled .person-header {
+      display: block; } }
   .itls-styled .person-header .person-image {
-    width: 200px;
-    height: 200px;
+    width: 30vw;
+    height: 30vw;
+    max-width: 200px;
+    max-height: 200px;
     background-size: cover;
     border-radius: 999px; }
   .itls-styled .person-header .person-details {
     flex: 1;
     padding: 0 30px; }
+    .itls-styled .person-header .person-details p {
+      margin: 5px 0px 5px 0px; }
+    @media only screen and (max-device-width: 600px), only screen and (max-width: 600px) {
+      .itls-styled .person-header .person-details {
+        padding: 0; } }
     .itls-styled .person-header .person-details .person-links a {
       display: inline-block;
-      margin: 10px; }
+      margin: 10px 10px 10px 0px; }
 
 .itls-styled .person-contact span {
   display: inline-block;
-  margin: 15px; }
+  margin: 5px 10px 0px 0px; }
 
 .itls-styled .keywords-list li {
   font-style: italic; }
