--- a/app/scss/_people.scss
+++ b/app/scss/_people.scss
@@ -19,7 +19,10 @@
       margin: 10px;
       text-align: center;
       flex-basis:30%;
-      flex-grow:0;
+      flex-grow:1;
+      @media #{$break-sm} {
+        flex-basis:47%;
+      }
       hr {
         border: none;
         border-bottom: 2px solid #E7E7E7;
@@ -33,7 +36,7 @@
       }
       .person-image {
         background-color: #ddd;
-        max-width: 150px;
+        width: 150px;
         margin: 10px;
         border-radius: 5px;
       }
@@ -44,19 +47,30 @@
     margin-top: 30px;
     display: flex;
     flex-direction: row;
+    @media #{$break-sm-xs} {
+      display:block;
+    }
     .person-image {
-      width: 200px;
-      height: 200px;
+      width: 30vw;
+      height: 30vw;
+      max-width:200px;
+      max-height:200px;
       background-size: cover;
       border-radius: 999px;
     }
     .person-details {
       flex: 1;
       padding: 0 30px;
+      p {
+        margin:5px 0px 5px 0px;
+      }
+      @media #{$break-sm-xs} {
+        padding:0;
+      }
       .person-links {
         a {
           display: inline-block;
-          margin: 10px;
+          margin:10px 10px 10px 0px;
         }
       }
     }
@@ -64,7 +78,7 @@
   .person-contact {
     span {
       display: inline-block;
-      margin: 15px;
+      margin:5px 10px 0px 0px;
     }
   }
 
